# advent-of-code

./: .editorconfig  .gitignore  Cargo.toml  README.md  new.sh
2015-py/day-03/: houses.py
2015-py/day-07/: wires.py
2015-py/day-12/: accounting.py
2015-py/day-17/: containers.py
2015-rs/day-19/: Cargo.toml
2015-rs/day-20/: Cargo.toml
2015-rs/day-21/: Cargo.toml
2015-rs/day-22/: Cargo.toml
2015-rs/day-23/: Cargo.toml
2015-rs/day-24/: Cargo.toml
2015-rs/day-25/: Cargo.toml
2015/day-10/: look_and_say.py
2015/day-15/: cookies.py
2015/day-20/: Cargo.toml
2015/day-21/: Cargo.toml
2015/day-22/: Cargo.toml
2015/day-23/: Cargo.toml
2015/day-25/: Cargo.toml
2016-rs/day-13/: Cargo.toml
2016-rs/day-18/: Cargo.toml
2016-rs/day-21/: Cargo.toml
2016-rs/day-22/: Cargo.toml
2016-rs/day-25/: Cargo.toml
2016/day-01/: Cargo.toml
2016/day-02/: Cargo.toml
2016/day-03/: Cargo.toml
2016/day-04/: Cargo.toml
2016/day-05/: Cargo.toml
2016/day-06/: Cargo.toml
2016/day-07/: Cargo.toml
2016/day-08/: Cargo.toml
2016/day-09/: Cargo.toml
2016/day-10/: Cargo.toml
2016/day-11/: Cargo.toml
2019/: Cargo.toml
2019/day-09/: Cargo.toml
2019/day-09/src/: main.rs
2021/: Cargo.toml
day-04/: advent_coin.py
day-06/: lights.py
day-1/: floors.py
day-11/: password.py
day-13/: input2.txt  knights.py
day-14/: reindeer.py
day-16/: sues.py
day-18/: lights.py
day-19/: fabricator.py  input.txt  rudolph.py
day-2/: wrap-it.py
day-5/: nice.py
day-6/: lights.py
day-8/: chars.py
day-9/: routes.py
template/: Cargo.toml
(+138 files in other folders)
