[package]
name = "year-2019-day-09"
version = "0.1.0"
authors = ["Eric Petersen <eric@ericpetersen.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
intcode = { path = "../intcode" }
